--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="assets/css/styles.css"/>
-    <title>Skywings</title>
+    <title>FLight Path</title>
   </head>
   <body>
     <nav>
       <div class="nav__header">
         <div class="nav__logo">
-          <a href="#" class="logo">Skywings</a>
+          <a href="#" class="logo">FLight Path</a>
         </div>
         <div class="nav__menu__btn" id="menu-btn">
           <i class="ri-menu-line"></i>
@@ -161,20 +161,20 @@
         <img src="assets/showcase.jpg" alt="showcase" />
       </div>
       <div class="showcase__content">
-        <h4>UNLEASH WANDERLUST WITH SKYWINGS</h4>
+        <h4>UNLEASH WANDERLUST WITH FLIGHT PATH</h4>
         <p>
-          Embark on a journey like no other with Skywings, where your travel
+          Embark on a journey like no other with Flight Path, where your travel
           dreams come to life. Our mission is to inspire and facilitate your
           adventures, whether you seek the vibrant energy of bustling
           cityscapes, the serene beauty of pristine beaches, or the captivating
-          history of ancient landmarks. At Skywings, we provide expertly curated
+          history of ancient landmarks. At Flight Path, we provide expertly curated
           destinations and personalized itineraries, ensuring that every trip is
           tailored to your unique preferences. Discover hidden gems, immerse
           yourself in diverse cultures, and create unforgettable memories that
           will last a lifetime.
         </p>
         <p>
-          With Skywings as your ultimate travel companion, exploring the wonders
+          With Flight Path as your ultimate travel companion, exploring the wonders
           of the world has never been easier. Our insider tips and local
           insights give you the tools to navigate new places with confidence and
           excitement. From the moment you start planning to the day you return
@@ -260,10 +260,10 @@
                   <span><i class="ri-star-fill"></i></span>
                 </div>
                 <p>
-                  Skywings has completely transformed my travel experience. From
+                  Flight Path has completely transformed my travel experience. From
                   finding hidden gems in bustling cities to discovering serene
                   retreats off the beaten path, every detail was thoughtfully
-                  arranged. I can't recommend Skywings enough for anyone looking
+                  arranged. I can't recommend Flight Path enough for anyone looking
                   to elevate their travel experience!
                 </p>
               </div>
@@ -287,7 +287,7 @@
                   <span><i class="ri-star-fill"></i></span>
                 </div>
                 <p>
-                  My recent adventure with Skywings was nothing short of
+                  My recent adventure with Flight Path was nothing short of
                   spectacular. The personalized itineraries and recommendations
                   they provided led me to extraordinary locations that I would
                   never have found on my own. I'm already planning my next
@@ -314,7 +314,7 @@
                   <span><i class="ri-star-fill"></i></span>
                 </div>
                 <p>
-                  Skywings offered a transformative experience for my research
+                  Flight Path offered a transformative experience for my research
                   into historical landmarks. The unique aerial perspectives and
                   provided a new level of appreciation and insight into the
                   sites I studied. I highly recommend their services to fellow
@@ -342,7 +342,7 @@
                 </div>
                 <p>
                   Finding a balance between work and travel can be challenging,
-                  but Skywings made it effortless. Their efficient planning and
+                  but Flight Path made it effortless. Their efficient planning and
                   excellent recommendations helped me maximize my downtime and
                   enjoy every moment of my trip. I look forward to working with
                   them again on future travels.
@@ -365,7 +365,7 @@
       <div class="section__container footer__container">
         <div class="footer__col">
           <div class="footer__logo">
-            <a href="#" class="logo">Skywings</a>
+            <a href="#" class="logo">Flight Path</a>
           </div>
           <p>
             Explore the world with ease and excitement through our comprehensive
@@ -403,7 +403,7 @@
             </li>
             <li>
               <a href="#">
-                <span><i class="ri-record-mail-line"></i></span> info@skywings
+                <span><i class="ri-record-mail-line"></i></span> info@flightpath
               </a>
             </li>
             <li>
