Update footer with dynamic year and modify styles for footer links

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2024 Adnan Bhaldar. All rights reserved.
+        &copy; <span id="current-year"></span> <a href="https://github.com/adnan-bhaldar" target="_blank">Adnan Bhaldar.</a> All Rights Reserved
       </div>
     </footer>
 
